--- a/5-objects/_objects.typography.scss
+++ b/5-objects/_objects.typography.scss
@@ -174,6 +174,28 @@ $hint-inline-heading-underline-colour: darken( $heading-colour, 20 );
     }
 }
 
+// Multi-column lists
+$multi-column-list-gap: 4.5rem;
+
+
+@include breakpoint ( $tablet-and-bigger ) {
+    .lists {
+        display: flex;
+     
+        &.two-column {
+            > ul {
+                max-width: calc( 50% - #{$multi-column-list-gap/2} );
+
+                + ul { margin-left: $multi-column-list-gap; }
+            }
+        }
+    }
+}
+
+    .lists.two-column > ul {
+        margin-bottom: 0;
+    }
+
 // Adds short delimiting line AFTER actual item
 .item-separated {
     @include after( block ){
