[ENH] Makes the header more consistent with other parts of the website.

--- a/1-settings/_settings.fonts.scss
+++ b/1-settings/_settings.fonts.scss
@@ -13,6 +13,7 @@ $font-victoria-icons:   'VicIcons' !default;
 $weight-thin:       200 !default;
 $weight-light:      300 !default;
 $weight-normal:     400 !default;
+$weight-medium:     500 !default;
 $weight-semibold:   600 !default;
 $weight-bold:       700 !default;
 $weight-extrabold:  800 !default;
