[ENH] Extends the forms to show tooltips and small notes.

--- a/5-objects/_objects.base.scss
+++ b/5-objects/_objects.base.scss
@@ -5,6 +5,7 @@
 // Design patterns without any cosmetic details.
 
 
+// Icons *MUST BE* first
 @import 'objects.icons.scss';
 @import 'objects.grid.scss';
 
