--- a/5-objects/_objects.icons.scss
+++ b/5-objects/_objects.icons.scss
@@ -22,56 +22,56 @@ $ico-margin:       .9em;
 /* ===== FONT ICON'S CODES ================================================== */
 
 
-$ico-code-study-cap-thin:  '\e807';
-$ico-code-bubble-thin:     '\e80c';
+$ico-code-study-cap-thin:  '\E007';
+$ico-code-bubble-thin:     '\E00C';
 
-$ico-code-arr-right:       '\e809';
-$ico-code-arr-left:        '\e80b';
-$ico-code-arr-down:        '\e80d';
-$ico-code-arr-up:          '\e80e';
+$ico-code-arr-right:       '\E00B';
+$ico-code-arr-left:        '\E009';
+$ico-code-arr-down:        '\E00E';
+$ico-code-arr-up:          '\E00D';
 
-$ico-code-arr-short-down:  '\e80f';
-$ico-code-arr-short-left:  '\e810';
-$ico-code-arr-short-right: '\e811';
-$ico-code-arr-short-up:    '\e812';
+$ico-code-arr-short-down:  '\E042';
+$ico-code-arr-short-left:  '\E041';
+$ico-code-arr-short-right: '\E040';
+$ico-code-arr-short-up:    '\E03F';
 
-$ico-code-help:            '\e813';
-$ico-code-quote-start:     '\e814';
-$ico-code-quote-end:       '\e815';
-$ico-code-phone:           '\e817';
-$ico-code-mail:            '\e818';
-$ico-code-clock:           '\e806';
-$ico-clock-back:           '\e816';
+$ico-code-help:            '\E00F';
+$ico-code-quote-start:     '\E010';
+$ico-code-quote-end:       '\E011';
+$ico-code-phone:           '\E013';
+$ico-code-mail:            '\E014';
+$ico-code-clock:           '\E006';
+$ico-clock-back:           '\E012';
 
-$ico-code-star:            '\e800';
-$ico-code-hourglass:       '\e801';
-$ico-code-info:            '\e803';
-$ico-code-book:            '\e804';
-$ico-code-cancel:          '\e805';
-$ico-code-ext-link:        '\e81a';
-$ico-code-ok:              '\e81b';
-$ico-code-youtube-play:    '\e81c';
+$ico-code-star:            '\E000';
+$ico-code-hourglass:       '\E001';
+$ico-code-info:            '\E003';
+$ico-code-book:            '\E004';
+$ico-code-cancel:          '\E005';
+$ico-code-ext-link:        '\E016';
+$ico-code-ok:              '\E017';
+$ico-code-youtube-play:    '\E018';
 
-$ico-code-spin:            '\e81d';
-$ico-code-search:          '\e802';
-$ico-code-person:          '\e81f';
-$ico-code-list:            '\e808';
+$ico-code-spin:            '\E019';
+$ico-code-search:          '\E002';
+$ico-code-person:          '\E01B';
+$ico-code-list:            '\E008';
 
-$ico-code-location:        '\e820';
-$ico-code-tick:            '\e821';
-$ico-code-calendar:        '\e822';
-$ico-code-flag:            '\e823';
+$ico-code-location:        '\E01C';
+$ico-code-tick:            '\E01D';
+$ico-code-calendar:        '\E01E';
+$ico-code-flag:            '\E01F';
 
-$ico-code-warning:         '\e824';
-$ico-code-gauge:           '\e825';
-$ico-code-group:           '\e826';
+$ico-code-warning:         '\E020';
+$ico-code-gauge:           '\E021';
+$ico-code-group:           '\E022';
 
-$ico-code-globe:           '\e827';
-$ico-code-money:           '\e828';
-$ico-code-exchange:        '\e829';
-$ico-code-world:           '\e80a';
-$ico-code-vcard:           '\e819';
-$ico-code-house:           '\e81e';
+$ico-code-globe:           '\E023';
+$ico-code-money:           '\E024';
+$ico-code-exchange:        '\E025';
+$ico-code-world:           '\E00A';
+$ico-code-vcard:           '\E015';
+$ico-code-house:           '\E01A';
 
 
 
@@ -95,6 +95,8 @@ $code-triangle-down:    '\25be';
 
     &:before {
         @include iconify();
+        position: relative;
+        top: 3px;
     }
 
     /* Font icons */
