--- a/7-trumps/_trumps.site-header.scss
+++ b/7-trumps/_trumps.site-header.scss
@@ -280,7 +280,7 @@ $logo-tablet-height: 5.7rem;
 
                     a {
                         font-weight: $weight-medium;
-                        text-transform: uppercase;
+                        // text-transform: uppercase;
                         color: $grey-silver-chalice;
                         font-size: 75%;
 
