toggle-header icon resize - was too large

--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -179,6 +179,7 @@ $nm-bg-color: $grey-gallery;
                 float: left;
                 width: 1em;
                 padding-right: .5em;
+                font-size: 1.5rem;
             }
         }
     }
