update uikit path

--- a/1-settings/_settings.paths.scss
+++ b/1-settings/_settings.paths.scss
@@ -23,7 +23,7 @@ $path-fonts:     $path-assets + '/fonts' !default;
 /* ===== CDNS =============================================================== */
 
 // 1st level
-$path-cdn:        'https://static.victoria.ac.nz' !default;
+$path-cdn:        'https://www.victoria.ac.nz/__data/assets/git_bridge/0005/1778018/dist/' !default;
 
 
 // 2nd level
