Update UI kit url root to wgtn

--- a/1-settings/_settings.paths.scss
+++ b/1-settings/_settings.paths.scss
@@ -25,7 +25,7 @@ $path-fonts:     $path-assets + '/fonts' !default;
 
 
 // 1st level
-$path-cdn:        'https://www.victoria.ac.nz/__data/assets/git_bridge/0005/1778018/dist';
+$path-cdn:        'https://www.wgtn.ac.nz/__data/assets/git_bridge/0005/1778018/dist';
 
 
 // 2nd level
