Course year tag margin DE-5809

--- a/6-components/_components.lists.scss
+++ b/6-components/_components.lists.scss
@@ -101,6 +101,7 @@ $tag-bg-color: $blue-humming-bird;
         background-color: $tag-bg-color;
         padding: .15rem .5rem;
         margin-right: .35em;
+        margin-bottom: .25rem;
 
         a.active {
             padding-right: 24px;
